@startuml

title __DATAFRAME's Class Diagram__\n

  namespace com.example.procomsearch {
    namespace dataFrame {
      class com.example.procomsearch.dataFrame.ArrayListIntent {
          - ci : ArrayList<Company_Index>
          - inputSearch : String
          - userId : int
          + ArrayListIntent()
          + getInputSearch()
          + getList()
          + getuserid()
      }
    }
  }
  

  namespace com.example.procomsearch {
    namespace dataFrame {
      class com.example.procomsearch.dataFrame.BST {
          + getPreOrderList()
          + insert()
      }
    }
  }
  

  namespace com.example.procomsearch {
    namespace dataFrame {
      class com.example.procomsearch.dataFrame.Company_Index {
          + Key : Double
          + Name : String
          ~ Code : String
          - promotedPower : Double
          + Company_Index()
          + getCode()
          + getPromotedPower()
          + setPromotedPower()
      }
    }
  }
  

  namespace com.example.procomsearch {
    namespace dataFrame {
      class com.example.procomsearch.dataFrame.Database_reader {
          + getTreeByName()
          + setTreeByName()
      }
    }
  }
  

  namespace com.example.procomsearch {
    namespace dataFrame {
      class com.example.procomsearch.dataFrame.Node {
          + key : Double
          + values : ArrayList<Company_Index>
          + Node()
      }
    }
  }
  

  com.example.procomsearch.dataFrame.ArrayListIntent .up.|> java.io.Serializable
  com.example.procomsearch.dataFrame.BST o-- com.example.procomsearch.dataFrame.Node : root
  com.example.procomsearch.dataFrame.Company_Index .up.|> java.io.Serializable
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : FET
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : MET
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : NPAT
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : NPGT
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : OET
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : OPT
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : PROMT
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : SET
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : TOET
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : TOIAT
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : TOIGT
  com.example.procomsearch.dataFrame.Database_reader o-- com.example.procomsearch.dataFrame.BST : TPT
  com.example.procomsearch.dataFrame.Node o-- com.example.procomsearch.dataFrame.Node : left
  com.example.procomsearch.dataFrame.Node o-- com.example.procomsearch.dataFrame.Node : parent
  com.example.procomsearch.dataFrame.Node o-- com.example.procomsearch.dataFrame.Node : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
